2005-08-21 Niklas Knutsson  <nq@altern.org>

	* Fix (1/2)^n < 0.5

2005-06-11 Niklas Knutsson  <nq@altern.org>

	* Remove requirement glib-2.0 >= 2.4 and require libxml2 >= 2.3.8
	* Do not let << take precedence over >> read from left to right

2005-06-10 Niklas Knutsson  <nq@altern.org>

	* Do not use unicode prefix names for long names
	* xor() and bitxor() is NOT algebra
	* Add even() and odd() functions
	* shift() function and operators ("<<" and ">>")
	* Add functins for getting exchange rates url and file name to allow interface to do the downloading themselves

2005-06-09 Niklas Knutsson  <nq@altern.org>

	* Support for "e" instead of "E" in result

2005-06-07 Niklas Knutsson  <nq@altern.org>

	* SIGN_POWER_1, ... => "^(1)", ... instead of "^1", ...

2005-06-06 Niklas Knutsson  <nq@altern.org>

	* Update Swedish translation

2005-06-05 Niklas Knutsson  <nq@altern.org>

	* Reminder => Remainder
	* Reminder (mod) => Modulus
	* Bitwise NOT (~)
	* xor() and bitXor()
	* Clean up expression such (x && y) > 0
	* Update currencies (more added)
	* Warn the use that objects with '~' in name will be lost
	* Keep loading/saving after error
	* Do not crash when saving data sets (initialize cat_i_prev)
	* Do not load nameless objects

2005-06-02 Niklas Knutsson  <nq@altern.org>

	* Bitwise AND (&), OR (|), XOR
	* Remove old giac stuff

2005-06-01 Niklas Knutsson  <nq@altern.org>

	* Non-static getElement() function
	* Initialize saved_locale before use

2005-05-15 Niklas Knutsson  <nq@altern.org>

	* Max values seem to have been lost a long time ago -- add them again

2005-05-07 Niklas Knutsson  <nq@altern.org>

	* Initialize ids_i
	* Fix documentation typos
	* Fix includes.h for gcc-4.0

2005-03-06 Niklas Knutsson  <nq@altern.org>

	* 5e2 = 5E2 = 500 and 5e = 5*e

2005-02-08 Niklas Knutsson  <nq@altern.org>
	
	* Update solve2()

2005-02-06 Niklas Knutsson  <nq@altern.org>

	* Dialog with buttons works in gtk+-2.6.2